--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -521,6 +521,9 @@ nav div {
     margin-left: auto;
     margin-right: auto;
     width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .videoBox {
@@ -722,6 +725,10 @@ nav div {
     .channelEntryPane img {
         border-radius: 100%;
     }
+
+.channelEntryPaneLocked {
+    outline: 1px solid var(--mainColor);
+}
 
 .channelEntryPaneList {
     padding: 10px 0 10px 0;
