--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -1215,6 +1215,90 @@ input:checked + .slider {
             color: var(--secColor);
         }
 
+.trashbinOverlay {
+    position: fixed;
+    top: 40px;
+    margin-left: 0;
+    padding: 10px 0 10px 0;
+    width: 550px;
+    background-color: var(--nav_bg_t);
+    backdrop-filter: blur(20px);
+    z-index: 500;
+    display: block;
+    border: 1px solid var(--video_bd_bot);
+    border-left: none;
+    border-top: none;
+    box-shadow: 5px 5px 10px -8px rgba(0, 0, 0, .2);
+    max-height: calc(100vh - 100px);
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+    .trashbinOverlay:hover {
+        overflow-y: auto;
+    }
+
+.trashbinList {
+    display: flex;
+    flex-direction: column;
+}
+
+.trashbinListEntry {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 80px;
+    margin: 5px 0 5px 0;
+    padding: 0 0 0 5px;
+    cursor: pointer;
+}
+
+    .trashbinListEntry:hover {
+        background: var(--highlight_t);
+    }
+
+.trashbinListEntryImage {
+    width: 143px;
+}
+
+.trashbinListEntryImage img {
+    height: 100%;
+    width: auto;
+}
+
+.trashbinListEntryContent {
+    display: flex;
+    flex-direction: column;
+    width: 357px;
+    height: 100%;
+}
+
+.trashbinListEntryContentTitle {
+    padding: 5px 5px 2px 10px;
+    height: auto;
+    width: 100%;
+    color: var(--font_title);
+    line-height: 20px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+}
+
+.trashbinListEntryContentMeta {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 2px 0 5px 10px;
+    height: auto;
+    width: 100%;
+    color: var(--font_text);
+    font-size: 14px;
+}
+
 .videoThumb {
     position: relative;
     cursor: pointer;
