--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -210,6 +210,7 @@ nav button {
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+        margin: 0 5px 0 10px;
     }
 
 nav p {
@@ -422,7 +423,7 @@ nav div {
 .activeNavButton {
     color: var(--secColor);
     background-color: var(--mainColor);
-    max-width: 130px;
+    max-width: 135px;
     transition: max-width 0.2s ease-in-out;
 }
 
@@ -1096,7 +1097,7 @@ button.deleteChannelButton:hover {
             margin-left: 5px;
         }
 
-    .settingCategoryList .listSelectedMarker, .channelEntry .listSelectedMarker {
+    .settingCategoryList .listSelectedMarker, .channelEntry .listSelectedMarker, .tagsListEntryContent .listSelectedMarker {
         display: flex;
         align-items: center;
         width: 5px;
@@ -1104,7 +1105,7 @@ button.deleteChannelButton:hover {
         padding: 0 5px 0 5px;
     }
 
-        .settingCategoryList .listSelectedMarker div, .channelEntry .listSelectedMarker div {
+        .settingCategoryList .listSelectedMarker div, .channelEntry .listSelectedMarker div, .tagsListEntryContent .listSelectedMarker div {
             display: block;
             width: 100%;
             height: 30px;
@@ -1298,6 +1299,213 @@ input:checked + .slider {
     color: var(--font_text);
     font-size: 14px;
 }
+
+.tagsOverlay {
+    position: fixed;
+    top: 40px;
+    margin-left: 0;
+    padding: 10px 0 10px 0;
+    width: 550px;
+    background-color: var(--nav_bg_t);
+    backdrop-filter: blur(20px);
+    color: var(--font_title);
+    z-index: 500;
+    display: block;
+    border: 1px solid var(--video_bd_bot);
+    border-left: none;
+    border-top: none;
+    box-shadow: 5px 5px 10px -8px rgba(0, 0, 0, .2);
+    max-height: calc(100vh - 100px);
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+.tagsOverlay:hover {
+    overflow-y: auto;
+}
+
+.tagsList {
+    display: flex;
+    flex-direction: column;
+}
+
+.tagsListAdd {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    height: 36px;
+    padding: 3px 0 3px 18px;
+}
+
+.tagsListAddInput {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    height: 100%;
+}
+
+    .tagsListAddInput input {
+        width: 250px;
+        height: 26px;
+        padding: 2px;
+        margin: 0;
+        background: var(--bg);
+        border: 1px solid var(--font_text);
+    }
+
+    .tagsListAddInput button {
+        height: 32px;
+        width: 32px;
+        font-size: 22px;
+        padding: 0;
+        margin: 0;
+        border: 1px solid var(--font_text);
+    }
+
+        .tagsListAddInput button:hover {
+            background: var(--mainColor);
+            color: var(--secColor);
+        }
+
+.tagsListEntry {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    padding: 0;
+}
+
+    .tagsListEntry:hover {
+        background: var(--highlight_t);
+        border-top: 1px solid var(--video_bd_bot);
+        border-bottom: 1px solid var(--video_bd_bot);
+        box-shadow: 0 0 10px -8px var(--font_title);
+    }
+
+.tagsListEntryContent {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 40px;
+    padding: 0 0 0 5px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.tagsListEntryContentName {
+    width: 460px;
+}
+
+.tagsListEntryContentEdit {
+    height: 26px;
+    border: 1px solid var(--font_text);
+    padding: 0 10px 0 10px;
+    margin: 0;
+    background: var(--nav_bg_t);
+}
+
+    .tagsListEntryContentEdit:hover {
+        background: var(--mainColor);
+        color: var(--secColor);
+    }
+
+.tagsListEntryEdit {
+    display: flex;
+    flex-direction: column;
+    padding: 5px 0 5px 0;
+}
+
+.tagsListEntryEditEntry {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    height: 26px;
+    padding: 3px 10px 3px 40px;
+}
+
+    .tagsListEntryEditEntry:hover {
+        background: var(--bg_t);
+    }
+
+.tagsListEntryEditEntryName {
+    width: 425px;
+}
+
+.tagsListEntryEditEntryButton {
+    height: 22px;
+    border: 1px solid var(--font_text);
+    padding: 0 8px 0 8px;
+    margin: 0;
+    background: var(--nav_bg_t);
+}
+
+    .tagsListEntryEditEntryButton:hover {
+        background: var(--mainColor);
+        color: var(--secColor);
+    }
+
+.tagsListEntryEditAdd {
+    display: flex;
+    flex-direction: row;
+    height: 34px;
+    padding: 2px 10px 2px 40px;
+}
+
+.tagsListEntryEditAddInput {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+    .tagsListEntryEditAddInput input {
+        width: 250px;
+        height: 20px;
+        padding: 2px;
+        margin: 0;
+        background: var(--nav_bg_t);
+        border: 1px solid var(--font_text);
+    }
+
+    .tagsListEntryEditAddInput button {
+        height: 26px;
+        width: 26px;
+        font-size: 22px;
+        padding: 0;
+        margin: 0;
+        border: 1px solid var(--font_text);
+    }
+
+    .tagsListEntryEditAddInput button:hover {
+        background: var(--mainColor);
+        color: var(--secColor);
+    }
+
+.tagsListEntryEditRemove {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    height: 30px;
+    padding: 2px 10px 2px 40px;
+}
+
+.tagsListEntryEditRemoveButton {
+    height: 26px;
+    border: 1px solid var(--font_text);
+    padding: 0 10px 0 10px;
+    margin: 0;
+    background: var(--nav_bg_t);
+}
+
+    .tagsListEntryEditRemoveButton:hover {
+        background: var(--mainColor);
+        color: var(--secColor);
+    }
 
 .videoThumb {
     position: relative;
