--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -1244,6 +1244,14 @@ input:checked + .slider {
     flex-direction: column;
 }
 
+.trashbinListSearch {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    height: 40px;
+}
+
 .trashbinListEntry {
     display: flex;
     flex-direction: row;
@@ -1252,10 +1260,15 @@ input:checked + .slider {
     margin: 5px 0 5px 0;
     padding: 0 0 0 5px;
     cursor: pointer;
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
 }
 
     .trashbinListEntry:hover {
         background: var(--highlight_t);
+        border-top: 1px solid var(--video_bd_bot);
+        border-bottom: 1px solid var(--video_bd_bot);
+        box-shadow: 0 0 10px -8px var(--font_title);
     }
 
 .trashbinListEntryImage {
