--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -735,6 +735,7 @@ nav div {
     border: var(--video_bd_bot);
     backdrop-filter: blur(20px);
     color: var(--font_title);
+    border: 1px solid var(--video_bd_bot);
 }
 
     .channelEntryPane:hover {
@@ -746,7 +747,7 @@ nav div {
     }
 
 .channelEntryPaneLocked {
-    outline: 1px solid var(--mainColor);
+    border: 1px solid var(--mainColor);
 }
 
 .channelEntryPaneList {
@@ -1380,11 +1381,16 @@ input:checked + .slider {
         background: var(--bg_t);
     }
 
+    .tagsListEntryEditEntry:hover .tagsListEntryEditEntryButton {
+        display: flex;
+    }
+
 .tagsListEntryEditEntryName {
-    width: 425px;
+    width: 419px;
 }
 
 .tagsListEntryEditEntryButton {
+    display: none;
     height: 22px;
     border: 1px solid var(--font_text);
     padding: 0 8px 0 8px;
@@ -1421,37 +1427,29 @@ input:checked + .slider {
         border: 1px solid var(--font_text);
     }
 
-    .tagsListEntryEditAddInput button {
-        height: 26px;
-        width: 26px;
-        font-size: 22px;
-        padding: 0;
-        margin: 0;
-        border: 1px solid var(--font_text);
-    }
+.tagsListEntryEditAddInputAddButton {
+    height: 26px;
+    width: 26px;
+    font-size: 22px;
+    padding: 0;
+    margin: 0;
+    border: 1px solid var(--font_text);
+}
 
-    .tagsListEntryEditAddInput button:hover {
+    .tagsListEntryEditAddInputAddButton:hover {
         background: var(--mainColor);
         color: var(--secColor);
     }
 
-.tagsListEntryEditRemove {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    height: 30px;
-    padding: 2px 10px 2px 40px;
-}
-
-.tagsListEntryEditRemoveButton {
+.tagsListEntryEditAddInputRemoveButton {
     height: 26px;
     border: 1px solid var(--font_text);
     padding: 0 10px 0 10px;
-    margin: 0;
+    margin: 0 0 0 107px;
     background: var(--nav_bg_t);
 }
 
-    .tagsListEntryEditRemoveButton:hover {
+    .tagsListEntryEditAddInputRemoveButton:hover {
         background: var(--mainColor);
         color: var(--secColor);
     }
