--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -36,8 +36,8 @@
 
 #confirmationMenu {
     top: 0;
-    display: none;
-    position: fixed;
+    display: flex;
+    position: absolute;
     width: 100%;
     height: 100%;
     background: #00000033;
