--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -986,6 +986,71 @@ nav div {
     cursor: default;
 }
 
+.profileOverlay {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 40px;
+    right: 0px;
+    width: 200px;
+    height: 200px;
+    background-image: url(https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/72/722d6a903a617f633d38af2bfcf43e30724bc4b3_full.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 500;
+    border: 1px solid var(--video_bd_bot);
+    border-right: none;
+    border-top: none;
+    box-shadow: -5px 5px 10px -8px rgba(0, 0, 0, .2);
+    color: var(--font_title);
+}
+
+    .profileOverlay .profileBlur {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        background-color: var(--nav_bg_t);
+        backdrop-filter: blur(5px);
+    }
+
+    .profileOverlay .profileHeader {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 60px;
+        padding: 0;
+        margin: 10px 0 10px 0;
+    }
+        
+        .profileOverlay .profileHeader p {
+            text-align: center;
+            margin: 0;
+            font-size: 22px;
+            font-weight: bold;
+        }
+
+        .profileOverlay .profileHeader img {
+            margin-left: 5px;
+            margin-right: 5px;
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+    .profileOverlay .profileOption {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-color: var(--font_title);
+        border-width: 1px;
+        margin: 0;
+        height: 32px;
+        width: 100%;
+    }
+
 .settingsOverlay {
     display: flex;
     flex-direction: row;
