playlists can now be hidden

--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -640,36 +640,6 @@ nav div {
     overflow-x: visible;
 }
 
-.inputListOverlay {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    top: 40px;
-    left: 0;
-    width: 400px;
-    height: 50px;
-    padding: 0 15px 0 5px;
-    background-color: var(--nav_bg_t);
-    backdrop-filter: blur(10px);
-    z-index: 500;
-    border: 1px solid var(--video_bd_bot);
-    border-left: none;
-    border-top: none;
-    box-shadow: 5px 5px 10px -8px rgba(0, 0, 0, .2);
-    overflow-y: hidden;
-    overflow-x: hidden;
-}
-
-    .inputListOverlay input{
-        width: 100%;
-    }
-
-    .inputListOverlay button {
-        background-color: var(--nav_bg);
-    }
-
 .channelList {
     border-collapse: collapse;
     width: 100%;
@@ -933,6 +903,99 @@ nav div {
     align-items: center;
     height: 100%;
 }
+
+.inputListOverlay {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 40px;
+    left: 0;
+    width: 900px;
+    height: auto;
+    padding: 0;
+    background-color: var(--nav_bg_t);
+    backdrop-filter: blur(10px);
+    z-index: 500;
+    border: 1px solid var(--video_bd_bot);
+    border-left: none;
+    border-top: none;
+    box-shadow: 5px 5px 10px -8px rgba(0, 0, 0, .2);
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+    .inputListOverlay input{
+        width: 50%;
+    }
+
+    .inputListOverlay button {
+        background-color: var(--nav_bg);
+        margin-right: 15px;
+    }
+
+.playlistUIMainDiv {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+    .playlistUIMainDiv img {
+        width: 246px;
+        height: 138px;
+    }
+
+    .playlistUIMainDiv p {
+        color: var(--font_title);
+        width: 236px;
+        margin: 10px 0 10px;
+        padding: 0 5px 0 5px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+
+    .playlistUIMainDiv .playlistUIUpperDiv {
+        z-index: 2;
+        display: inline-grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        grid-auto-rows: 200px;
+        grid-gap: 10px;
+        align-items: start;
+        align-content: start;
+        justify-items: center;
+        width: 860px;
+        border-bottom: 1px solid var(--font_text);
+        padding: 20px;
+    }
+
+        .playlistUIMainDiv .playlistUIUpperDiv .playlistUIListEntry {
+            width: 246px;
+            height: 176px;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            border: 2px solid transparent;
+            cursor: default;
+        }
+
+        .playlistUIMainDiv .playlistUIUpperDiv .playlistUIListEntry:hover {
+            border: 2px solid var(--mainColor);
+            cursor: pointer;
+        }
+
+    .playlistUIMainDiv .playlistUILowerDiv {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: right;
+        padding: 0 15px 0 5px;
+        width: 100%;
+        height: 50px;
+    }
 
 .addPlaylistButton {
     padding: 0;
