--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -1092,9 +1092,8 @@ nav div {
     position: fixed;
     top: 40px;
     right: 0px;
-    width: 200px;
-    height: 200px;
-    background-image: url(https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/72/722d6a903a617f633d38af2bfcf43e30724bc4b3_full.jpg);
+    width: 400px;
+    height: 800px;
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 500;
@@ -1119,7 +1118,7 @@ nav div {
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 60px;
+        height: 42px;
         padding: 0;
         margin: 10px 0 10px 0;
     }
@@ -1127,7 +1126,7 @@ nav div {
         .profileOverlay .profileHeader p {
             text-align: center;
             margin: 0;
-            font-size: 22px;
+            font-size: 26px;
             font-weight: bold;
         }
 
@@ -1147,9 +1146,13 @@ nav div {
         border-color: var(--font_title);
         border-width: 1px;
         margin: 0;
-        height: 32px;
+        height: 36px;
         width: 100%;
     }
+
+        .profileOverlay .profileOption:hover {
+            background: var(--nav_bg_t);
+        }
 
 .settingsOverlay {
     display: flex;
