--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -1100,7 +1100,7 @@ nav div {
     border: 1px solid var(--video_bd_bot);
     border-right: none;
     border-top: none;
-    box-shadow: -5px 5px 10px -8px rgba(0, 0, 0, .2);
+    box-shadow: -7px 7px 5px -5px rgba(0, 0, 0, .4);
     color: var(--font_title);
 }
 
@@ -1112,8 +1112,7 @@ nav div {
         width: 100%;
         height: 100%;
         margin: 0;
-        background-color: transparent;
-        backdrop-filter: blur(0px);
+        background-color: #0000001f;
     }
 
     .profileOverlay .profileHeader {
@@ -1164,7 +1163,7 @@ nav div {
         .profileOverlay .profileNotes textarea {
             width: 370px;
             height: 240px;
-            background: #0000002f;
+            background: #0000004f;
             border: 1px solid var(--font_text);
             color: #fafafa;
             font-family: 'Roboto', sans-serif;
@@ -1183,12 +1182,12 @@ nav div {
     }
 
         .profileOverlay .profileOption:hover {
-            background: #0000002f;
+            background: #0000009f;
         }
 
     .profileOverlay .profileSpacer {
         width: 100%;
-        height: 354px;
+        height: 320px;
     }
 
 .settingsOverlay {
