improved visuals of profile, playlist and channel overlays

--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -626,7 +626,7 @@ nav div {
     position: fixed;
     top: 40px;
     margin-left: 0;
-    padding: 10px 0 10px 0;
+    padding: 0;
     width: 400px;
     background-color: var(--nav_bg_t);
     z-index: 500;
@@ -636,6 +636,23 @@ nav div {
     border-top: none;
     box-shadow: 5px 5px 10px -8px rgba(0, 0, 0, .2);
     max-height: calc(100vh - 50px);
+    overflow-y: visible;
+    overflow-x: visible;
+}
+
+.channelOverlayBackground {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: none;
+    backdrop-filter: blur(20px);
+}
+
+.channelOverlayContainer {
+    position: relative;
+    padding: 10px 0 10px 0;
+    width: 100%;
+    height: 100%;
     overflow-y: visible;
     overflow-x: visible;
 }
@@ -980,6 +997,8 @@ nav div {
             align-items: flex-start;
             border: 2px solid transparent;
             cursor: default;
+            background: var(--nav_bg);
+            box-shadow: 0 0 5px 0 rgba(0,0,0);
         }
 
             .playlistUIMainDiv .playlistUIUpperDiv .playlistUIListEntry img {
@@ -1132,6 +1151,7 @@ nav div {
         }
 
         .profileOverlay .profileHeader input {
+            width: 100%;
             text-align: center;
             margin: 0;
             font-size: 26px;
@@ -1161,12 +1181,13 @@ nav div {
         .profileOverlay .profileNotes textarea {
             width: 370px;
             height: 240px;
-            background: #0000004f;
+            background: #0000007f;
             border: 1px solid var(--font_text);
             color: #fafafa;
             font-family: 'Roboto', sans-serif;
             resize: none;
             padding: 5px;
+            box-shadow: 0 0 5px 0 rgba(0,0,0);
         }
 
     .profileOverlay .profileOption {
