--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -81,6 +81,8 @@
                 margin: 0;
                 padding: 0;
                 color: var(--font_title);
+                font-size: 16px;
+                font-family: 'Roboto', sans-serif;
                 background: none;
                 box-shadow: none;
             }
